k8s/dvr/overlays/jellyfin/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - name: app
          resources:
            requests:
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
          ports:
            - name: http
              containerPort: 8096
            - name: discovery
              containerPort: 7359
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /cache
              subPath: jellyfin/cache
            - name: config
              mountPath: /config
              subPath: jellyfin/config
