k8s/dvr/overlays/jellyfin/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: http
    - name: discovery
      port: 7359
      targetPort: 7359
      protocol: UDP
