k8s/dvr/overlays/jellyfin/ingress-ext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress-ext
  namespace: dvr
  labels:
    app: jellyfin
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - jf.lab.javydekoning.com
  rules:
    - host: jf.lab.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  name: http
